# disambiguator

./: .gitignore  DisambigCustomizedDefs.cpp  DisambigCustomizedDefs.h  DisambigEngine.cpp  DisambigRatios.cpp  Disambigmain.cpp  Doxyfile  configure.ac  makefile  makefile.orig  readme  readme.markdown
config/: blockingresults.txt  engine.txt  engine18.txt  engine2.txt  engine2009.txt  engine2010.txt  engine2011.txt  engine3.txt  engine_jones.txt  engineresults.txt
data/: .gitignore  invpat.csv
doc/: .gitignore  Makefile  manual.tex
doc/images/: Makefile
doc/manual/: Makefile  manual.tex
include/: DisambigCluster.h  DisambigCustomizedDefs.h  DisambigDefs.h  DisambigEngine.h  DisambigFileOper.h  DisambigNewCluster.h  DisambigPostProcess.h  DisambigRatios.h  DisambigTraining.h  DisambigUtilities.h  Disambigmain.h  attribute.h  blocking_operation.h  cluster.h  clusterhead.h  clusterinfo.h  comparators.h  disambiguate.h  disambiguation.h  engine.h  exceptions.h  fileoper.h  macros.h  newcluster.h  postprocess.h  ratios.h  record.h  record_reconfigurator.h  strcmp95.h  string_manipulator.h  training.h  txt2sqlite3.h  typedefs.h  utilities.h  worker.h
src/: .gitignore  DisambigCluster.cpp  DisambigComp.cpp  DisambigCustomizedDefs.cpp  DisambigDefs.cpp  DisambigEngine.cpp  DisambigFileOper.cpp  DisambigNewCluster.cpp  DisambigPostProcess.cpp  DisambigRatioSmoothing.cpp  DisambigRatios.cpp  DisambigTraining.cpp  DisambigUtilities.cpp  Disambigmain.cpp  Makefile.am  attribute.cpp  blocking_operation.cpp  breakpoints.gdb  cluster.cpp  comparators.cpp  disambiguate.cpp  engine.cpp  fileoper.cpp  main.cpp  makefile.citris  newcluster.cpp  postprocess.cpp  ratio_smoothing.cpp  ratios.cpp  record.cpp  record_private.h  record_reconfigurator.cpp  runtime  strcmp95.c  string_manipulator.cpp  testdb.sh  threading.cpp  training.cpp  txt2sqlite3-test.final  txt2sqlite3-test.txt  (+3 more)
test/: .gitignore  Makefile  Makefile.am  abbreviation  bashcolors.sh  colortest.h  comparesimilarities  fake.cpp  fake.h  integration.rb  integration.sh  invpat2.txt  jarowinkler.data  misspell  namecompare  reporting.cpp  reporting.h  termcolors.rb  test_abbreviation.cpp  test_assignee_comparison.cpp  test_attribute.cpp  test_blocking.cpp  test_cluster.cpp  test_clusterhead.cpp  test_clusterinfo.cpp  test_coauthor.cpp  test_comparators.cpp  test_compare.cpp  test_engine.cpp  test_engineconfig.cpp  test_fetch_records.cpp  test_initial.cpp  test_jwcmp.cpp  test_misspell.cpp  test_namecompare.cpp  test_postprocess.cpp  test_qp.cpp  test_rarenames.cpp  test_ratiocomponent.cpp  test_ratios.cpp  (+16 more)
test/data/: final_berkeley.txt  final_eighteen.txt  final_jones.txt  invpat_onerecord.txt  rare_names_berkeley.txt
test/data/berkeley/: prior_saved_1.txt  prior_saved_2.txt  prior_saved_3.txt  prior_saved_4.txt  prior_saved_5.txt  prior_saved_6.txt  tset05_1.txt  tset05_3.txt  tset05_6.txt
test/fixtures/csv/: rjones.csv
test/testdata/: assignee_comparison.csv  clustertest.csv
